added vue functionality

--- a/dashboard/login.html
+++ b/dashboard/login.html
@@ -41,7 +41,7 @@
         <!-- <p class="help is-danger">This password does not meet our minimum requirements</p> -->
      </div>
      <div class="field">
-        <div class="control">
+        <div class="control" id="log">
            <button class="button is-link">Register</button>
         </div>
      </div>
